# OrarioTreni

./: .gitignore  README.md  ViaggiaTrenoAPI.md  ansicolors.py  database.csv  error_to_manage.txt  pyproject.toml  requirements.txt  rest_api.js  stations.csv  trains.py  vercel.json  viaggiatreno.py
api/: models.py  utils.py  wrapper.py
cli/: main.py
orariotreni/: ansicolors.py  models.py  trains.py  utils.py  viaggiatreno.py
responses/: andamentoTreno (S00462, 33407, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01059, 24960, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01059, 24962, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01059, 24964, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01326, 10475, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01326, 10477, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01326, 10875, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01326, 10877, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01326, 10905, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01326, 10935, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01326, 10937, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01326, 24961, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01529, 2232, 1702508400000) [Thu, 14 Dec 2023 13:34:04 GMT].json  andamentoTreno (S01529, 2234, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01529, 2236, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01529, 2276, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01640, 10899, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01645, 10605, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01645, 10607, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01645, 2273, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01645, 2275, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  andamentoTreno (S01645, 2595, 1702422000000) [Wed, 13 Dec 2023 15:44:52 GMT].json  (+69 more)
src/: API.py  Style.py  trains.py
webapp/: index.html  script.js
