[project]
name = "OrarioTreni"
version = "0.2.0"
description = "Controlla gli orari dei treni e il loro stato in tempo reale"
readme = "README.md"
requires-python = ">=3.13"
authors = [
	{name = "Matteo Delton", email = "deltonmatteo@gmail.com"},
]
dependencies = [
    "inquirer>=3.4.0",
    "prettytable>=3.12.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "FIX", "T20", "TD", "E501", "DTZ005", "DTZ006"]
