[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OrarioTreni"
version = "0.2.0"
description = "Access real-time train schedules, delays, stops, tracks, and more with ease!"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Matteo Delton", email = "deltonmatteo@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "fastapi[standard]>=0.115.5",
    "inquirer>=3.4.0",
    "prettytable>=3.12.0",
    "rapidfuzz>=3.10.1",
    "requests>=2.32.3",
]

[project.scripts]
orario-treni = "cli.main:main"
dump-stations = "api.wrapper:dump_stations"

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "FIX", "T20", "TD", "E501", "DTZ005", "DTZ006", "DTZ007"]

[tool.setuptools.packages.find]
include = ["cli", "api"]
